DTSRD-4072-RecreateError